# aws-bedrock-speed-tests

./: .env.example  .gitignore  README.md  main.py  plot_bedrock_speeds.py  pyproject.toml  queries.yaml  unified_bedrock_speed_test.py
misc/: plot_only_boto3.py  test_requests.py
